[package]
name = "rust_numbers_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.9.3"
rand = "0.8.4"
getrandom = { version = "0.2", default-features = false, features = ["js"] }

[lib]
crate-type = ["cdylib"]
#wasm-bindgen = "0.2.78"
#js-sys = "0.3"
#web-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.78"
js-sys = "0.3"
web-sys = "0.3"
#wasm-opt = ["-Oz", "--enable-mutable-globals"]

#[build]
#target = "wasm32-unknown-unknown; x86_64-unknown-linux-gnu"
#target = "x86_64-unknown-linux-gnu"
#wasm32-unknown-emscripten
